<resources>
    <string name="app_name">My Watchlist</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_signup">or signup</string>
    <string name="username">Username</string>
    <string name="signup">Signup</string>
    <string name="or_login">or login</string>
    <string name="email">Email</string>
    <string name="plot">Plot:</string>
    <string name="episodes">Episodes:</string>
    <string name="rating">Rating:</string>
    <string name="views">Views:</string>
    <string name="profile">Profile</string>
    <string name="add_series_to_watchlist">Add Series to Watchlist</string>
    <string name="title">Title</string>
    <string name="progress">Progress:</string>
    <string name="status">Status:</string>
    <string name="score">Score:</string>
    <string name="comment">Comment:</string>
    <string name="edit">Edit</string>
    <string name="genres">Genres:</string>
    <string name="delete">Delete</string>
    <string name="editing_title">Editing Title</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="series">Series</string>
    <string name="top_views">Top Views</string>
    <string name="all">All</string>
    <string name="top_rated">Top Rated</string>
    <string name="search_by_title">search by title</string>
    <string name="add">ADD</string>
    <string name="watchlist">Watchlist</string>
    <string name="token">token</string>
    <string name="search_by_status">Search by status</string>
    <string name="search_by_genre">Search by Genre</string>
    <string name="select_status">Select Status</string>
    <string name="select_score">Select Score</string>

    <string-array name="status_list">
        <item>Watching</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>On hold</item>
        <item>Plan to watch</item>
    </string-array>

    <string-array name="score_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="genre_list">
        <item>Drama</item>
        <item>Crime</item>
        <item>Sci fi</item>
        <item>Comedy</item>
        <item>Fantasy</item>
        <item>Animation</item>
        <item>Sitcom</item>
        <item>Reality</item>
        <item>Soap opera</item>
        <item>Telenovela</item>
        <item>Documentary</item>
        <item>Action</item>
        <item>Educational</item>
        <item>Sport</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Satirical</item>
        <item>Supernatural</item>
        <item>Science</item>
        <item>School</item>
        <item>Time travel</item>
        <item>Historical</item>
        <item>Adventure</item>
        <item>Thriller</item>
        <item>War</item>
    </string-array>
</resources>